tests/NormalTests/paczka1/fuzzy1/91848940.err
Error in line 1: HrPIi5K S296 71,7
Error in line 8: HrPIi5K S505 30,4
Error in line 7: WU5HT3Xrmj S296 27,9
Error in line 11: HrPIi5K A207 155,8
Error in line 23: HrPIi5K S296 192,:
Error in line 5: DPpn A207 91,4
Error in line 19: EyAP8akl S296 39,2
Error in line 28: DPpn S296 49,2
